function(make_test t)
    add_executable(${t} ${t}.cpp)
    target_compile_definitions(${t} PRIVATE LSTM_TESTNAME="${t}")
    add_test(test.${t} ${t})
    conditional_link_statsd(${t})
endfunction()

add_subdirectory(include)
add_subdirectory(multi_file_test)
add_subdirectory(rbtree_tests)

make_test(var)
make_test(transaction)
make_test(dining_philosophers)
make_test(nesting)
make_test(transfer_funds)
make_test(list)
make_test(thread_data_synchronization)
make_test(exception)
make_test(delete_var_and_modify)
make_test(throwing_constructor)
make_test(thread_data_creation)

find_package(Boost 1.62.0 OPTIONAL_COMPONENTS context fiber)
if (Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
    add_executable(fiber_support fiber_support.cpp)
    add_test(test.fiber_support fiber_support)
    target_compile_definitions(fiber_support PRIVATE LSTM_TESTNAME="fiber_support")
    if (STATSD)
        target_link_libraries(fiber_support ${Boost_LIBRARIES} statsd_client)
    else()
        target_link_libraries(fiber_support ${Boost_LIBRARIES})
    endif()
endif()