add_executable(lstm_atomic lstm/atomic.cpp)
add_executable(lstm_critical_section lstm/critical_section.cpp)
add_executable(lstm_easy_var lstm/easy_var.cpp)
add_executable(lstm_lstm lstm/lstm.cpp)
add_executable(lstm_memory lstm/memory.cpp)
add_executable(lstm_read_only lstm/read_only.cpp)
add_executable(lstm_read_transaction lstm/read_transaction.cpp)
add_executable(lstm_read_write lstm/read_write.cpp)
add_executable(lstm_relative lstm/relative.cpp)
add_executable(lstm_retry lstm/retry.cpp)
add_executable(lstm_thread_data lstm/thread_data.cpp)
add_executable(lstm_transaction lstm/transaction.cpp)
add_executable(lstm_transaction_domain lstm/transaction_domain.cpp)
add_executable(lstm_var lstm/var.cpp)
add_executable(lstm_containers_list lstm/containers/list.cpp)
add_executable(lstm_containers_rbtree lstm/containers/rbtree.cpp)
add_executable(lstm_detail_atomic_base lstm/detail/atomic_base.cpp)
add_executable(lstm_detail_backoff lstm/detail/backoff.cpp)
add_executable(lstm_detail_commit_algorithm lstm/detail/commit_algorithm.cpp)
add_executable(lstm_detail_compiler lstm/detail/compiler.cpp)
add_executable(lstm_detail_easy_var_detail lstm/detail/easy_var_detail.cpp)
add_executable(lstm_detail_fast_rw_mutex lstm/detail/fast_rw_mutex.cpp)
add_executable(lstm_detail_gp_callback lstm/detail/gp_callback.cpp)
add_executable(lstm_detail_lstm_fwd lstm/detail/lstm_fwd.cpp)
add_executable(lstm_detail_namespace_macros lstm/detail/namespace_macros.cpp)
add_executable(lstm_detail_pod_hash_set lstm/detail/pod_hash_set.cpp)
add_executable(lstm_detail_pod_mallocator lstm/detail/pod_mallocator.cpp)
add_executable(lstm_detail_pod_vector lstm/detail/pod_vector.cpp)
add_executable(lstm_detail_read_set_value_type lstm/detail/read_set_value_type.cpp)
add_executable(lstm_detail_reclaim_buffer lstm/detail/reclaim_buffer.cpp)
add_executable(lstm_detail_thread_gp lstm/detail/thread_gp.cpp)
add_executable(lstm_detail_transaction_base lstm/detail/transaction_base.cpp)
add_executable(lstm_detail_transaction_log lstm/detail/transaction_log.cpp)
add_executable(lstm_detail_var_detail lstm/detail/var_detail.cpp)
add_executable(lstm_detail_write_set_lookup lstm/detail/write_set_lookup.cpp)
add_executable(lstm_detail_write_set_value_type lstm/detail/write_set_value_type.cpp)
